<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginHome.HomeActivity"
    android:id="@+id/dl_drawer_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/studentHelpLayout"
            android:visibility="visible">
            <TextView
                android:id="@+id/helpTextAuthorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20dp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/helpTextAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authors"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpTextAuthorTitle"
                />

            <TextView
                android:id="@+id/helpTextVersionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpTextAuthor"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpTextVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/versions"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpTextVersionTitle"/>

            <TextView
                android:id="@+id/helpGeneralTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generalTitle"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpTextVersion"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generalText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpGeneralTitle"/>

            <TextView
                android:id="@+id/helpHomeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeTitle"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpGeneral"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpHomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpHomeTitle"/>

            <TextView
                android:id="@+id/helpToolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toolbarTitle"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpHomeText"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toolbarText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpToolbarTitle"/>

            <TextView
                android:id="@+id/helpCalendarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courseCalendarHelpTitle"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpToolbarText"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpCalendarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courseCalendarText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpCalendarTitle"/>

            <TextView
                android:id="@+id/helpContentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courseContentHelpTitle"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpCalendarText"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpContentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courseContentText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpContentTitle"/>

            <TextView
                android:id="@+id/helpEnrollmentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courseEnrollmentHelpTitle"
                android:textSize="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpContentText"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/helpEnrollmentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courseEnrollmentText"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@id/helpEnrollmentTitle"/>

        </RelativeLayout>
    </ScrollView>





</RelativeLayout >
