<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginHome.HomeActivity"
    android:id="@+id/dl_drawer_layout">
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_layout"
        >

        <TextView
            android:id="@+id/homeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcomeMessage"
            android:textAlignment="center"
            android:textSize="10pt" />

        <Button
            android:id="@+id/homeCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="29dp"
            android:onClick="clickCalendar"
            android:text="@string/calendar" />

        <Button
            android:id="@+id/homeCourseContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeCalendar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:onClick="clickCourseContent"
            android:text="@string/courseContent" />
            <!--android:text="@string/courseContentTitle" !-->/>

        <Button
            android:id="@+id/homeEnrollment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeCourseContent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:onClick="clickEnrollment"
            android:text="@string/enrollment" />

        <Button
            android:id="@+id/homeHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeEnrollment"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:onClick="clickHelp"
            android:text="@string/help" />

        <Button
            android:id="@+id/homeLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeHelp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:onClick="clickLogout"
            android:text="@string/logout" />



    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nv_navView"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/main_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>