<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginHome.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enterUsernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterUsername"
            android:paddingTop="100dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_below="@+id/enterUsernameText"
            android:paddingTop="30dp"
            android:inputType="number"
            android:text="0"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/username"
            android:layout_centerInParent="true"
            android:onClick="loginClick"
            android:text="@string/login"
            />

        <Button
            android:id="@+id/loginButtonAdmin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="loginClickAdmin"
            android:text="@string/loginAdmin" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>